[package]
name = "nazuna"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
egg-mode = "0.16"
dirs = "4.0"
serde = "1.0.133"
serde_json = "1.0"
open = "2.0.2"
dialoguer = "0.9.0"
indicatif = "0.16.2"
futures = "0.3"
loading = "0.1.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
