[package]
name = "nazuna"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"
egg-mode = "^0.16"
dirs = "^4.0"
serde = "^1"
serde_json = "1"
open = "^2.0"
dialoguer = "^0.10"
indicatif = "^0.16"
futures = "^0.3"
loading = "^0.1"
reqwest = { version = "^0.11", features = ["json", "stream"] }
tokio = { version = "^1", features = ["full"] }
